--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://fonts.googleapis.com/css2?family=Segoe+UI:wght@400;700&display=swap" rel="stylesheet" />
   <title>Video Stream or Download</title>
   <style>
     body {
@@ -221,6 +222,10 @@
   </style>
 </head>
 <body>
+   <div class="site-header">
+    <h1>Movies Aro - தமிழ் </h1>
+   
+  </div>
   <input type="text" id="searchBox" placeholder="Search for a movie..." />
   <div id="spinner" style="display: none; color: white;">Loading...</div>
   <div id="results"></div>
