--- a/index.html
+++ b/index.html
@@ -17,159 +17,190 @@
     }
 
     .site-header {
-      display: flex;
-      justify-content: space-between;
-      align-items: flex-start;
-      padding: 1.2rem;
-      border-bottom: 2px solid #00c6ff;
-      width: 100%;
-      max-width: 800px;
-      margin-bottom: 30px;
-      gap: 10px;
-    }
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  padding: 1.2rem;
+  border-bottom: 2px solid #00c6ff;
+  width: 100%;
+  max-width: 800px;
+  margin-bottom: 30px;
+  gap: 10px;
+}
 
+.site-header h1 {
+  font-size: 2rem;
+  color: #ffffffcc;
+  border-left: 4px solid #00c6ff;
+  padding-left: 0px;
+  margin: 0;
+  flex: 1;
+  word-break: break-word;
+  white-space: normal; /* allow wrap */
+}
+
+.telegram-center-wrapper {
+  flex-shrink: 0; /* prevent shrinking */
+}
+
+
+  #searchBox {
+    padding: 0.7rem;
+    font-size: 1rem;
+    width: 100%;
+    max-width: 600px;
+    margin-top: 20px;
+    border-radius: 8px;
+    border: none;
+    outline: none;
+  }
+
+  .link-container {
+    background: rgba(255, 255, 255, 0.05);
+    padding: 0.9rem;
+    border-radius: 8px;
+    margin: 10px 0;
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    cursor: pointer;
+    transition: background 0.3s ease;
+  }
+
+  .link-container:hover {
+    background: rgba(255, 255, 255, 0.1);
+  }
+
+  .link-name {
+    font-weight: 600;
+    font-size: 1.1rem;
+    text-decoration: none;
+    color: #00eaff;
+    display: block;
+    text-align: center;
+  }
+
+  .section-title {
+    font-size: 1.4rem;
+    margin-top: 20px;
+    color: #ffffffcc;
+    text-align: center;
+  }
+
+  .details {
+    margin: 20px 0;
+    padding: 15px;
+    background-color: rgba(255, 255, 255, 0.05);
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    border-radius: 10px;
+    width: 100%;
+    max-width: 700px;
+    overflow-x: auto;
+  }
+
+  .details table {
+    width: 100%;
+  }
+
+  .spinner-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 80px;
+  }
+
+  .spinner {
+    width: 40px;
+    height: 40px;
+    border: 5px solid rgba(255, 255, 255, 0.1);
+    border-top: 5px solid #00c6ff;
+    border-radius: 50%;
+    animation: spin 1s linear infinite;
+  }
+
+  @keyframes spin {
+    to {
+      transform: rotate(360deg);
+    }
+  }
+
+  /* ✅ Responsive Styles */
+  @media (max-width: 600px) {
     .site-header h1 {
-      font-size: 2rem;
-      color: #ffffffcc;
-      border-left: 4px solid #00c6ff;
-      padding-left: 0px;
-      margin: 0;
-      flex: 1;
-      word-break: break-word;
-      white-space: normal;
+      font-size: 1.5rem;
+      text-align: center;
     }
 
     #searchBox {
-      padding: 0.7rem;
-      font-size: 1rem;
-      width: 100%;
-      max-width: 600px;
-      margin-top: 20px;
-      border-radius: 8px;
-      border: none;
-      outline: none;
-    }
-
-    .link-container {
-      background: rgba(255, 255, 255, 0.05);
-      padding: 0.9rem;
-      border-radius: 8px;
-      margin: 10px 0;
-      border: 1px solid rgba(255, 255, 255, 0.1);
-      cursor: pointer;
-      transition: background 0.3s ease;
-    }
-
-    .link-container:hover {
-      background: rgba(255, 255, 255, 0.1);
-    }
-
-    .link-name {
-      font-weight: 600;
-      font-size: 1.1rem;
-      text-decoration: none;
-      color: #00eaff;
-      display: block;
-      text-align: center;
+      font-size: 0.9rem;
+      padding: 0.6rem;
     }
 
     .section-title {
-      font-size: 1.4rem;
-      margin-top: 20px;
-      color: #ffffffcc;
-      text-align: center;
+      font-size: 1.2rem;
     }
 
-    .spinner-container {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      min-height: 80px;
+    .link-name {
+      font-size: 1rem;
     }
 
-    .spinner {
-      width: 40px;
-      height: 40px;
-      border: 5px solid rgba(255, 255, 255, 0.1);
-      border-top: 5px solid #00c6ff;
-      border-radius: 50%;
-      animation: spin 1s linear infinite;
+    .details {
+      padding: 12px;
     }
+  }
 
-    @keyframes spin {
-      to {
-        transform: rotate(360deg);
-      }
-    }
+ .telegram-center-wrapper {
+    display: block;
+    margin-top: 0;
+  }
 
-    .telegram-glow-btn {
-      display: inline-block;
-      padding: 4px;
-      border-radius: 50%;
-      background: transparent;
-      transform: scale(1.1);
-      box-shadow: 0 0 25px rgba(0, 136, 204, 0.9), 0 0 60px rgba(0, 136, 204, 0.7);
-      transition: transform 0.3s ease, box-shadow 0.4s ease;
-      text-decoration: none;
-      position: relative;
-    }
+  .telegram-glow-btn {
+    display: inline-block;
+    padding: 4px;
+    border-radius: 50%;
+    background: transparent;
+    transform: scale(1.1);
+    box-shadow: 0 0 25px rgba(0, 136, 204, 0.9), 0 0 60px rgba(0, 136, 204, 0.7);
+    transition: transform 0.3s ease, box-shadow 0.4s ease;
+    text-decoration: none;
+    position: relative;
+  }
 
-    .telegram-icon {
-      width: 35px;
-      height: 35px;
-      display: block;
-    }
+  .telegram-icon {
+    width: 35px;
+    height: 35px;
+    display: block;
+  }
+.telegram-glow-btn::before {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 120px;
+    height: 120px;
+    background: radial-gradient(circle, rgba(0, 198, 255, 0.5) 20%, transparent 70%);
+    border-radius: 50%;
+    transform: translate(-50%, -50%) scale(0.8);
+    animation: pulse-wave-glow 2s infinite ease-out;
+    box-shadow: 0 0 30px rgba(0, 198, 255, 0.7), 0 0 60px rgba(0, 198, 255, 0.5);
+    filter: blur(2px);
+    z-index: -1;
+  }
 
-    .telegram-glow-btn::before {
-      content: '';
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      width: 120px;
-      height: 120px;
-      background: radial-gradient(circle, rgba(0, 198, 255, 0.5) 20%, transparent 70%);
-      border-radius: 50%;
+  @keyframes pulse-wave-glow {
+    0% {
       transform: translate(-50%, -50%) scale(0.8);
-      animation: pulse-wave-glow 2s infinite ease-out;
-      box-shadow: 0 0 30px rgba(0, 198, 255, 0.7), 0 0 60px rgba(0, 198, 255, 0.5);
-      filter: blur(2px);
-      z-index: -1;
+      opacity: 0.9;
     }
-
-    @keyframes pulse-wave-glow {
-      0% {
-        transform: translate(-50%, -50%) scale(0.8);
-        opacity: 0.9;
-      }
-      50% {
-        transform: translate(-50%, -50%) scale(1.6);
-        opacity: 0.5;
-      }
-      100% {
-        transform: translate(-50%, -50%) scale(2.2);
-        opacity: 0;
-      }
+    50% {
+      transform: translate(-50%, -50%) scale(1.6);
+      opacity: 0.5;
     }
-
-    @media (max-width: 600px) {
-      .site-header h1 {
-        font-size: 1.5rem;
-        text-align: center;
-      }
-
-      #searchBox {
-        font-size: 0.9rem;
-        padding: 0.6rem;
-      }
-
-      .section-title {
-        font-size: 1.2rem;
-      }
-
-      .link-name {
-        font-size: 1rem;
-      }
+    100% {
+      transform: translate(-50%, -50%) scale(2.2);
+      opacity: 0;
     }
+  }
+
+
 
     .video-container {
       width: 100%;
