--- a/index.html
+++ b/index.html
@@ -258,7 +258,9 @@
    
   </div>
   <input type="text" id="searchBox" placeholder="Search for a movie..." />
-  <div id="spinner" style="display: none; color: white;">Loading...</div>
+<div class="spinner-container" id="spinner" style="display:none;">
+    <div class="spinner"></div>
+  </div><br/>
   <div id="results"></div>
   <!-- Button HTML -->
 <button id="tamilDubbedBtn">🎥 All Tamil Dubbed Movies</button>
