--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
   <link href="https://fonts.googleapis.com/css2?family=Segoe+UI:wght@400;700&display=swap" rel="stylesheet" />
  
   <style>
+     * {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: 'Segoe UI', sans-serif;
+  }
+
     body {
       background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
       color: #fff;
@@ -257,7 +264,7 @@
     <h1>Movies Aro - தமிழ் </h1>
    
   </div>
-  <input type="text" id="searchBox" placeholder="Search for a movie..." />
+  <input type="text" id="searchBox" placeholder="Search for a movie..." /><br/>
 <div class="spinner-container" id="spinner" style="display:none;">
     <div class="spinner"></div>
   </div><br/>
