--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
       };
 
    
-
+downloadBtn.onclick = () => {
         const popup1 = document.getElementById("popup1");
           popup.style.display = "block";
           setTimeout(() => { popup.style.display = "none"; }, 10000);
