--- a/index.html
+++ b/index.html
@@ -398,8 +398,8 @@
    
 downloadBtn.onclick = () => {
         const popup1 = document.getElementById("popup1");
-          popup.style.display = "block";
-          setTimeout(() => { popup.style.display = "none"; }, 10000);
+          popup1.style.display = "block";
+          setTimeout(() => { popup1.style.display = "none"; }, 10000);
           setTimeout(() => { window.open(downloadPrefix + fid, "_self"); }, 500);
         };
     }
