--- a/index.html
+++ b/index.html
@@ -406,24 +406,31 @@ downloadBtn.onclick = () => {
   </script>
 
    <br/><br/>
-<div id="popup1" style="
-  position: fixed;
-  top: 30%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background: linear-gradient(135deg, #ffffff, #f0f0f0);
-  color: #333;
-  padding: 25px 40px;
-  border-radius: 16px;
-  box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
-  font-size: 1.2rem;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  display: none;
-  text-align: center;
-  z-index: 9999;
-  animation: popupFadeIn 0.4s ease-out;
-">
-  <strong style="display:block; font-size: 1.5rem; margin-bottom: 8px; color: #007BFF;">Thanks for downloading</strong>
+<div id="popup1">
+  <style>
+    #popup1 {
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: rgba(0, 0, 0, 0.6);
+      display: none;
+      align-items: center;
+      justify-content: center;
+      z-index: 9999;
+    }
+
+    #popup1 > div {
+      background: #1a2b3c;
+      padding: 20px 30px;
+      border-radius: 10px;
+      text-align: center;
+    }
+
+   
+    </style>
+  <strong style="display:block; font-size: 1.5rem; margin-bottom: 8px;">Thanks for downloading</strong>
   <span style="font-size: 1rem;">Please wait...</span>
 </div>
 
