--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
       z-index: 9999;
     }
 
-    #popup > div {
+    #popup  div {
       background: #1a2b3c;
       padding: 20px 30px;
       border-radius: 10px;
@@ -421,7 +421,7 @@ downloadBtn.onclick = () => {
       z-index: 9999;
     }
 
-    #popup1 > div {
+    #popup1  div {
       background: #1a2b3c;
       padding: 20px 30px;
       border-radius: 10px;
