--- a/index.html
+++ b/index.html
@@ -405,9 +405,7 @@ downloadBtn.onclick = () => {
     }
   </script>
 
-   <br/><br/>
-<div id="popup1">
-  <style>
+    <style>
     #popup1 {
       position: fixed;
       top: 0;
@@ -430,8 +428,13 @@ downloadBtn.onclick = () => {
 
    
     </style>
+
+   <br/><br/>
+<div id="popup1"><div>
+
   <strong style="display:block; font-size: 1.5rem; margin-bottom: 8px;">Thanks for downloading</strong>
   <span style="font-size: 1rem;">Please wait...</span>
+</div>
 </div>
 
 
