--- a/index.html
+++ b/index.html
@@ -303,13 +303,14 @@
 </style>
   <div id="videoPlayer"></div>
 
- <div id="popup" style="display: none;">
+ <div id="popup" style="display: none;"><div>
   <button id="closePopupBtn" style="position: absolute; top: 10px; right: 10px;">✖</button>
    <p>What do you want to do</p>
   <!-- Your popup content goes here -->
   <button id="streamBtn">Stream</button>
   <button id="downloadBtn">Download</button>
 </div>
+ </div>
 
 
   <script>
