--- a/index.html
+++ b/index.html
@@ -307,8 +307,9 @@
   <button id="closePopupBtn" style="position: absolute; top: 10px; right: 10px;">✖</button>
    <p>What do you want to do</p>
   <!-- Your popup content goes here -->
-  <button id="streamBtn">Stream</button>
+ 
   <button id="downloadBtn">Download</button>
+    <button id="streamBtn">Play Video</button>
 </div>
  </div>
 
