--- a/index.html
+++ b/index.html
@@ -209,12 +209,13 @@
 
 
 
-    .video-container {
-      height: 100%;
-      width: 100%;
-      max-width: 800px;
-      margin: 20px auto;
-    }
+  .video-container {
+  height: 500px; /* Increase this value as needed */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #000; /* Optional: helps show the bounds */
+}
 
     .video {
       width: 100%;
