--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  
+   <link rel="icon" type="image/svg+xml" href="/logo.svg">
 
 
   
@@ -19,8 +19,8 @@
   body {
     margin: 0;
     font-family: 'Inter', sans-serif;
-    background: #121212;
-    color: #f0f0f0;
+    background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
+      color: #fff
   }
 
   header {
