--- a/index.html
+++ b/index.html
@@ -263,8 +263,8 @@
 
 
       .final-entry {
-    background: #1f1f1f;
-    border: 1px solid #333;
+    background:;
+    border: 1px solid ;
     margin: 15px 0;
     padding: 20px;
     border-radius: 10px;
