--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <!-- Plyr CSS -->
 <link rel="stylesheet" href="https://cdn.plyr.io/3.7.8/plyr.css" />
 
-
+</head>
 
   
   
@@ -225,6 +225,7 @@
     <h1>Movie Aro - tamil</h1>
     
   </header>
+  <body>
  <input type="text" id="searchBox" placeholder="Search movies..." />
   <div id="spinner" class="spinner"></div>
 <br/>
@@ -468,5 +469,5 @@
 <!-- Plyr JS -->
 <script src="https://cdn.plyr.io/3.7.8/plyr.polyfilled.js"></script>
 
-
+  </body>
 </html>
