--- a/index.html
+++ b/index.html
@@ -177,6 +177,27 @@ make it <!DOCTYPE html>
   pointer-events: none;
 }
 
+    .video-thumbnail {
+  position: relative;
+  width: 100%;
+  padding-top: 56.25%; /* 16:9 Aspect Ratio */
+  overflow: hidden;
+  border-radius: 10px;
+  background: #000;
+  margin-bottom: 1rem;
+}
+
+.video-thumbnail video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  cursor: pointer;
+  border-radius: 10px;
+}
+
   </style>
 </head>
 
@@ -296,8 +317,11 @@ function showResults() {
     const div = document.createElement("div");
     div.className = "final-entry";
     div.innerHTML = `
-      <div class="fake-thumbnail" onclick="playVideo('${link.url}')">
-        <div class="play-button">▶</div>
+      <div class="video-thumbnail">
+        <video muted preload="metadata" poster="" onclick="playVideo('${link.url}')">
+          <source src="${link.url}#t=0.5" type="video/mp4">
+          Your browser does not support the video tag.
+        </video>
       </div>
       <strong>${link.name}</strong>
       <small>${link.size}</small>
@@ -309,7 +333,6 @@ function showResults() {
     resultsDiv.appendChild(div);
   });
 }
-
 
     function playVideo(url) {
       videoPlayer.innerHTML = `
